--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,23 @@ p {
   margin-left: 20px;
 }
 
+.feedbackCircular{
+border-radius:50%;
+width:50px;
+height:50px;
+text-align:center;
+border:2px solid red;
+color:white;
+padding:auto;
+background:green;
+}
+
+.75wid{
+position:absolute;
+display:inline-block;
+}
+
+.25wid{
+max-width:200px;
+display:inline-block;
+}
